--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ categories = ["command-line-utilities"]
 [dependencies]
 ctrlc = { version = "3.4.5", features = ["termination"] }
 termsize = "0.1.9"
+
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.58.0"
+features = ["Win32_System_Console"]
