feat: display current time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ keywords = ["cli"]
 categories = ["command-line-utilities"]
 
 [dependencies]
+chrono = { version = "0.4.38", default-features = false, features = [
+  "clock",
+  "std",
+] }
 ctrlc = { version = "3.4.5", features = ["termination"] }
 termsize = "0.1.9"
 
