--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,14 @@ chrono = { version = "0.4.38", default-features = false, features = [
   "std",
 ] }
 ctrlc = { version = "3.4.5", features = ["termination"] }
+serde = { version = "1.0.210", features = ["serde_derive"] }
 termsize = "0.1.9"
+toml = "0.8.19"
 
 [target.'cfg(windows)'.dependencies.windows]
 version = "0.58.0"
 features = ["Win32_System_Console"]
+
+[target.'cfg(windows)'.dependencies.windows-sys]
+version = "0.59.0"
+features = ["Win32_Globalization", "Win32_System_Com", "Win32_UI_Shell"]
